.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/Leave_Accrual_Revaluation__c.object-meta.xml
<CustomObject>
    <label>Leave Accrual Revaluation</label>
    <nameField>
        <displayFormat>LAR-{0000000}</displayFormat>
        <label>Leave Accrual Revaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Accrual Revaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>