.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Accounting_Payroll_Journal__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Payroll_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Payroll Journal</label>
    <referenceTo>tc9_bgl__Acc_Payroll_Journal__c</referenceTo>
    <relationshipLabel>Leave Accrual Revaluations</relationshipLabel>
    <relationshipName>Leave_Accrual_Revaluations</relationshipName>
    <type>Lookup</type>
</CustomField>