.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Assignment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Rate</label>
    <referenceTo>tc9_pr__Assignment_Rate__c</referenceTo>
    <relationshipLabel>Leave Accrual Revaluations</relationshipLabel>
    <relationshipName>Leave_Accrual_Revaluations</relationshipName>
    <type>Lookup</type>
</CustomField>