.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Assignment_Rate_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rate_Change_Date__c</fullName>
    <label>Assignment Rate Change Date</label>
    <type>Date</type>
</CustomField>