.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <formula>Payee_Leave_Rule__r.tc9_pr__Leave_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Type</label>
    <type>Text</type>
</CustomField>