.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/New_Liability_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Liability_Rate__c</fullName>
    <label>New Liability Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>