.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Old_Liability_Rate__c.field-meta.xml
<CustomField>
    <fullName>Old_Liability_Rate__c</fullName>
    <label>Old Liability Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>