.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>Payee_Leave_Rule__c</fullName>
    <label>Payee Leave Rule</label>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Leave Accrual Revaluations</relationshipLabel>
    <relationshipName>Leave_Accrual_Revaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>