.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Processed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date_Time__c</fullName>
    <label>Processed Date/Time</label>
    <type>DateTime</type>
</CustomField>