.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Revaluation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revaluation_Amount__c</fullName>
    <formula>Revaluation_Leave_Balance__c * ( New_Liability_Rate__c -  Old_Liability_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revaluation Leave Balance - (New Liability Rate - Old Liability Rate)</inlineHelpText>
    <label>Revaluation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>