.vscode/allianceuat_compare/force-app/main/default/objects/Leave_Accrual_Revaluation__c/fields/Revaluation_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Revaluation_Leave_Balance__c</fullName>
    <label>Revaluation Leave Balance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>